# simple-task-manager

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  APPLE_DESIGN_GUIDE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEPLOYMENT_STATUS.md  Dockerfile  OPTIMIZATION_REPORT.md  PERFORMANCE_GUIDE.md  PERFORMANCE_IMPROVEMENTS.md  PROJECT_SUMMARY.md  README.md  ROADMAP.md  SECURITY.md  bandit-report.json  docker-compose.yml  launch_taskforge.py  mkdocs.yml  performance_test.py  pyproject.toml  setup.cfg  simple_performance_test.py  test_performance.py  todo_app.py
.claude/: plugins.json  settings.local.json
.github/workflows/: ci-cd.yml  ci.yml  docs.yml
benchmarks/: performance_test.py
docs/: api-reference.md  architecture.md  cli-reference.md  index.md  use-cases.md
docs/api/: index.md
docs/contributing/: beginners-guide.md
docs/developer-guide/: index.md
docs/tutorials/: getting-started.md
docs/user-guide/: index.md
examples/: README.md  basic_usage.py  enterprise_integration.py  performance_benchmarking.py  plugin_development.py  simple_api.py  simple_cli.py
frontend/: app.js  index.html
frontend/plugins/: stats.js
plugins/: plugin_github.py  plugin_slack.py
scripts/: benchmark.py
simple-task-manager/: CONTRIBUTING.md  README.md  gitignore
taskforge/: __init__.py  _version.py  marketplace.py  types.py
taskforge/api/: __init__.py  dependencies.py  main.py  schemas.py  websockets.py
taskforge/api/routers/: projects.py  tasks.py  users.py
taskforge/cli/: __init__.py
taskforge/core/: __init__.py  manager.py  project.py  queries.py  task.py  user.py
taskforge/integrations/: __init__.py
taskforge/plugins/: __init__.py
taskforge/storage/: __init__.py  base.py  json_storage.py  models.py  optimized_storage.py  postgresql.py  postgresql_original.py  simple_json_storage.py  simple_postgresql_storage.py
taskforge/utils/: __init__.py  analytics.py  auth.py  cache.py  config.py  notifications.py  performance.py  search.py
taskforge/web/: __init__.py  apple_dashboard.py  dashboard.py
tests/: conftest.py  test_cli.py  test_websockets.py
tests/integration/: test_api.py  test_api_v2.py
tests/unit/: test_manager.py  test_project.py  test_storage.py  test_task.py  test_user.py
